--- a/img/index.html
+++ b/img/index.html
@@ -4,7 +4,6 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" href="img/profil.jpg" />
 
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css" />
@@ -49,9 +48,9 @@
 
     <!-- Jumbroton -->
     <section class="jumbotron text-center">
-      <img src="img/profil.jpg" alt="puskesmas" width="250" class="profil rounded-circle img-thumbnail" data-aos="zoom-in" />
-      <h1 class="display-4" data-aos="zoom-in">Eightball</h1>
-      <p class="lead" data-aos="zoom-in">Seorang pemuda wagu nan kaku.</p>
+      <img src="img/profil.jpg" alt="puskesmas" width="250" class="profil rounded-circle img-thumbnail" />
+      <h1 class="display-4">Eightball</h1>
+      <p class="lead">Seorang pemuda wagu nan kaku.</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
@@ -65,19 +64,19 @@
     <!-- About -->
     <section id="tentang">
       <div class="container">
-        <div class="row text-center mb-4" data-aos="fade-down">
+        <div class="row text-center mb-4">
           <div class="col">
             <h2>Tentang Saya</h2>
           </div>
         </div>
         <div class="row justify-content-center fs-5">
-          <div class="col-md-5" data-aos="fade-right">
+          <div class="col-md-5">
             <p align="justify">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, sit optio! Tempora assumenda repellat architecto iusto inventore repellendus porro voluptates eum ad dolore vel laborum pariatur atque, commodi deserunt? Nisi
               distinctio sequi, ab doloribus, harum sint asperiores nobis fugiat laboriosam eaque ipsam adipisci aliquid soluta vel minima veniam velit modi?
             </p>
           </div>
-          <div class="col-md-5" data-aos="fade-left">
+          <div class="col-md-5">
             <p align="justify">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus dolor illo consequuntur, minus laborum modi labore nulla. Laborum nostrum aliquam soluta iste, natus saepe, explicabo incidunt perferendis maxime, sit
               aperiam. Quo nesciunt saepe blanditiis suscipit harum ad est exercitationem necessitatibus nam similique natus vel, reprehenderit officiis sunt at facilis autem.
@@ -104,30 +103,30 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-4 mb-3" data-aos="zoom-in-right">
+          <div class="col-md-4 mb-3" data-aos="fade-right">
             <div class="card">
-              <img src="img/ig.png" class="card-img-top" alt="img1" />
-              <div class="card-body text-center">
-                <h5 class="card-title">INSTAGRAM</h5>
-                <a href="https://instagram.com/iqbalhanan_" class="btn btn-primary">@IQBALHANAN_</a>
+              <img src="img/ig.png" class="card-img-top" alt="galeri1" />
+              <div class="card-body">
+                <h5 class="card-title">Puskesmas Andong</h5>
+                <a href="#" class="btn btn-primary">Lihat Selengkapnya...</a>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3" data-aos="zoom-in">
             <div class="card">
-              <img src="img/yt.png" class="card-img-top" alt="img2" />
-              <div class="card-body text-center">
-                <h5 class="card-title">YouTube</h5>
-                <a href="https://youtube.com/ikkersyt" class="btn btn-primary">Iqbal Haha</a>
+              <img src="img/yt.png" class="card-img-top" alt="galeri2" />
+              <div class="card-body">
+                <h5 class="card-title">Puskesmas Andong</h5>
+                <a href="#" class="btn btn-primary">Lihat Selengkapnya...</a>
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3" data-aos="zoom-in-left">
+          <div class="col-md-4 mb-3" data-aos="fade-left">
             <div class="card">
-              <img src="img/twt.png" class="card-img-top" alt="img3" />
-              <div class="card-body text-center">
-                <h5 class="card-title">TWITTWE</h5>
-                <a href="https://twitter.com/iqbalhanan_" class="btn btn-primary">@IQBALHANAN_</a>
+              <img src="img/twt.png" class="card-img-top" alt="galeri3" />
+              <div class="card-body">
+                <h5 class="card-title">Puskesmas Andong</h5>
+                <a href="#" class="btn btn-primary">Lihat Selengkapnya...</a>
               </div>
             </div>
           </div>
