--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <a class="nav-link" href="#tentang">Tentang</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#galeri">Galeri</a>
+              <a class="nav-link" href="#sosmed">Sosmed</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#kontak">Kontak</a>
@@ -96,11 +96,11 @@
     <!-- Akhir About -->
 
     <!-- Galeri -->
-    <section id="galeri">
+    <section id="sosmed">
       <div class="container">
         <div class="row text-center mb-4" data-aos="fade-down">
           <div class="col">
-            <h2>Galeri</h2>
+            <h2>Sosial Media</h2>
           </div>
         </div>
         <div class="row">
