--- a/index.html
+++ b/index.html
@@ -160,15 +160,15 @@
             <form name="kontak-kami">
               <div class="mb-3" data-aos="fade-right">
                 <label for="name" class="form-label">Nama</label>
-                <input type="text" class="form-control" name="nama" id="name" aria-describedby="name" />
+                <input type="text" class="form-control" name="Nama" id="name" aria-describedby="name" />
               </div>
               <div class="mb-3" data-aos="fade-right">
                 <label for="Email" class="form-label">Email</label>
-                <input type="email" class="form-control" name="email" id="Email" aria-describedby="Email" />
+                <input type="email" class="form-control" name="Email" id="Email" aria-describedby="Email" />
               </div>
               <div class="mb-3" data-aos="fade-right">
                 <label for="pesan" class="form-label">Pesan</label>
-                <textarea class="form-control" name="pesan" id="pesan" rows="3"></textarea>
+                <textarea class="form-control" name="Pesan" id="pesan" rows="3"></textarea>
               </div>
               <button type="submit" class="btn btn-primary btn-kirim" data-aos="zoom-in">Kirim</button>
               <button class="btn btn-primary btn-loading d-none" type="button" disabled>
@@ -202,7 +202,7 @@
     </script>
 
     <script>
-      const scriptURL = "https://script.google.com/macros/s/AKfycbwr3tyq4tipSb9MjXzXS8-4ns2voPw88vZw_b1NeBLgB5fk0JZNZJk957t85t2jo2Tz3w/exec";
+      const scriptURL = "https://script.google.com/macros/s/AKfycbz5xwoDvyr7XiWmYEsCoOGo_oMXHalbeaA4Y8rZuCc5LGMwsOKxzc7iP53F8iVp7MR2ew/exec";
       const form = document.forms["kontak-kami"];
       const btnKirim = document.querySelector(".btn-kirim");
       const btnLoading = document.querySelector(".btn-loading");
