--- a/img/index.html
+++ b/img/index.html
@@ -4,6 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" href="img/profil.jpg" />
 
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css" />
@@ -35,7 +36,7 @@
               <a class="nav-link" href="#tentang">Tentang</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#galeri">Galeri</a>
+              <a class="nav-link" href="#sosmed">Sosmed</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#kontak">Kontak</a>
@@ -48,9 +49,9 @@
 
     <!-- Jumbroton -->
     <section class="jumbotron text-center">
-      <img src="img/profil.jpg" alt="puskesmas" width="250" class="profil rounded-circle img-thumbnail" />
-      <h1 class="display-4">Eightball</h1>
-      <p class="lead">Seorang pemuda wagu nan kaku.</p>
+      <img src="img/profil.jpg" alt="puskesmas" width="250" class="profil rounded-circle img-thumbnail" data-aos="zoom-in" />
+      <h1 class="display-4" data-aos="zoom-in">Eightball</h1>
+      <p class="lead" data-aos="zoom-in">Seorang pemuda wagu nan kaku.</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
@@ -64,19 +65,19 @@
     <!-- About -->
     <section id="tentang">
       <div class="container">
-        <div class="row text-center mb-4">
+        <div class="row text-center mb-4" data-aos="fade-down">
           <div class="col">
             <h2>Tentang Saya</h2>
           </div>
         </div>
         <div class="row justify-content-center fs-5">
-          <div class="col-md-5">
+          <div class="col-md-5" data-aos="zoom-in-up">
             <p align="justify">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, sit optio! Tempora assumenda repellat architecto iusto inventore repellendus porro voluptates eum ad dolore vel laborum pariatur atque, commodi deserunt? Nisi
               distinctio sequi, ab doloribus, harum sint asperiores nobis fugiat laboriosam eaque ipsam adipisci aliquid soluta vel minima veniam velit modi?
             </p>
           </div>
-          <div class="col-md-5">
+          <div class="col-md-5" data-aos="zoom-in-up">
             <p align="justify">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus dolor illo consequuntur, minus laborum modi labore nulla. Laborum nostrum aliquam soluta iste, natus saepe, explicabo incidunt perferendis maxime, sit
               aperiam. Quo nesciunt saepe blanditiis suscipit harum ad est exercitationem necessitatibus nam similique natus vel, reprehenderit officiis sunt at facilis autem.
@@ -95,38 +96,38 @@
     <!-- Akhir About -->
 
     <!-- Galeri -->
-    <section id="galeri">
+    <section id="sosmed">
       <div class="container">
         <div class="row text-center mb-4" data-aos="fade-down">
           <div class="col">
-            <h2>Galeri</h2>
+            <h2>Sosial Media</h2>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-4 mb-3" data-aos="fade-right">
+          <div class="col-md-4 mb-3" data-aos="zoom-in-down">
             <div class="card">
-              <img src="img/ig.png" class="card-img-top" alt="galeri1" />
-              <div class="card-body">
-                <h5 class="card-title">Puskesmas Andong</h5>
-                <a href="#" class="btn btn-primary">Lihat Selengkapnya...</a>
+              <img src="img/ig.png" class="card-img-top" alt="img1" />
+              <div class="card-body text-center">
+                <h5 class="card-title">INSTAGRAM</h5>
+                <a href="https://instagram.com/iqbalhanan_" class="btn btn-primary">@IQBALHANAN_</a>
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3" data-aos="zoom-in">
+          <div class="col-md-4 mb-3" data-aos="zoom-in-down">
             <div class="card">
-              <img src="img/yt.png" class="card-img-top" alt="galeri2" />
-              <div class="card-body">
-                <h5 class="card-title">Puskesmas Andong</h5>
-                <a href="#" class="btn btn-primary">Lihat Selengkapnya...</a>
+              <img src="img/yt.png" class="card-img-top" alt="img2" />
+              <div class="card-body text-center">
+                <h5 class="card-title">YouTube</h5>
+                <a href="https://youtube.com/ikkersyt" class="btn btn-primary">Iqbal Haha</a>
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3" data-aos="fade-left">
+          <div class="col-md-4 mb-3" data-aos="zoom-in-down">
             <div class="card">
-              <img src="img/twt.png" class="card-img-top" alt="galeri3" />
-              <div class="card-body">
-                <h5 class="card-title">Puskesmas Andong</h5>
-                <a href="#" class="btn btn-primary">Lihat Selengkapnya...</a>
+              <img src="img/twt.png" class="card-img-top" alt="img3" />
+              <div class="card-body text-center">
+                <h5 class="card-title">TWITTWE</h5>
+                <a href="https://twitter.com/iqbalhanan_" class="btn btn-primary">@IQBALHANAN_</a>
               </div>
             </div>
           </div>
@@ -159,15 +160,15 @@
             <form name="kontak-kami">
               <div class="mb-3" data-aos="fade-right">
                 <label for="name" class="form-label">Nama</label>
-                <input type="text" class="form-control" name="nama" id="name" aria-describedby="name" />
+                <input type="text" class="form-control" name="Nama" id="name" aria-describedby="name" />
               </div>
               <div class="mb-3" data-aos="fade-right">
                 <label for="Email" class="form-label">Email</label>
-                <input type="email" class="form-control" name="email" id="Email" aria-describedby="Email" />
+                <input type="email" class="form-control" name="Email" id="Email" aria-describedby="Email" />
               </div>
               <div class="mb-3" data-aos="fade-right">
                 <label for="pesan" class="form-label">Pesan</label>
-                <textarea class="form-control" name="pesan" id="pesan" rows="3"></textarea>
+                <textarea class="form-control" name="Pesan" id="pesan" rows="3"></textarea>
               </div>
               <button type="submit" class="btn btn-primary btn-kirim" data-aos="zoom-in">Kirim</button>
               <button class="btn btn-primary btn-loading d-none" type="button" disabled>
@@ -201,7 +202,7 @@
     </script>
 
     <script>
-      const scriptURL = "https://script.google.com/macros/s/AKfycbwr3tyq4tipSb9MjXzXS8-4ns2voPw88vZw_b1NeBLgB5fk0JZNZJk957t85t2jo2Tz3w/exec";
+      const scriptURL = "https://script.google.com/macros/s/AKfycbz5xwoDvyr7XiWmYEsCoOGo_oMXHalbeaA4Y8rZuCc5LGMwsOKxzc7iP53F8iVp7MR2ew/exec";
       const form = document.forms["kontak-kami"];
       const btnKirim = document.querySelector(".btn-kirim");
       const btnLoading = document.querySelector(".btn-loading");
