--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
           </div>
         </div>
         <div class="row justify-content-center fs-5">
-          <div class="col-md-5" data-aos="zoom-in-up">
+          <div class="col-md-5" data-aos="fade-right">
             <p align="justify">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, sit optio! Tempora assumenda repellat architecto iusto inventore repellendus porro voluptates eum ad dolore vel laborum pariatur atque, commodi deserunt? Nisi
               distinctio sequi, ab doloribus, harum sint asperiores nobis fugiat laboriosam eaque ipsam adipisci aliquid soluta vel minima veniam velit modi?
             </p>
           </div>
-          <div class="col-md-5" data-aos="zoom-in-up">
+          <div class="col-md-5" data-aos="fade-left">
             <p align="justify">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus dolor illo consequuntur, minus laborum modi labore nulla. Laborum nostrum aliquam soluta iste, natus saepe, explicabo incidunt perferendis maxime, sit
               aperiam. Quo nesciunt saepe blanditiis suscipit harum ad est exercitationem necessitatibus nam similique natus vel, reprehenderit officiis sunt at facilis autem.
@@ -104,7 +104,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-4 mb-3" data-aos="zoom-in-down">
+          <div class="col-md-4 mb-3" data-aos="zoom-in-right">
             <div class="card">
               <img src="img/ig.png" class="card-img-top" alt="img1" />
               <div class="card-body text-center">
@@ -113,7 +113,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3" data-aos="zoom-in-down">
+          <div class="col-md-4 mb-3" data-aos="zoom-in">
             <div class="card">
               <img src="img/yt.png" class="card-img-top" alt="img2" />
               <div class="card-body text-center">
@@ -122,7 +122,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3" data-aos="zoom-in-down">
+          <div class="col-md-4 mb-3" data-aos="zoom-in-left">
             <div class="card">
               <img src="img/twt.png" class="card-img-top" alt="img3" />
               <div class="card-body text-center">
