--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <div class="card">
               <img src="img/twt.png" class="card-img-top" alt="img3" />
               <div class="card-body text-center">
-                <h5 class="card-title">TWITTWE</h5>
+                <h5 class="card-title">TWITTER</h5>
                 <a href="https://twitter.com/iqbalhanan_" class="btn btn-primary">@IQBALHANAN_</a>
               </div>
             </div>
