--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
               <a class="nav-link" href="#tentang">Tentang</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="#project">Project</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#sosmed">Sosmed</a>
             </li>
             <li class="nav-item">
@@ -95,7 +98,39 @@
     </section>
     <!-- Akhir About -->
 
-    <!-- Galeri -->
+    <!-- Project -->
+    <section id="project">
+      <div class="container">
+        <div class="row text-center mb-4" data-aos="fade-down">
+          <div class="col">
+            <h2>Project</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 mb-3" data-aos="zoom-in-right"></div>
+          <div class="col-md-4 mb-3" data-aos="zoom-in">
+            <div class="card">
+              <img src="img/1.png" class="card-img-top" alt="img2" />
+              <div class="card-body text-center">
+                <h5 class="card-title">Puskesmas Andong</h5>
+                <a href="/puskesmas" class="btn btn-primary">Website Puskesmas Andong</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3" data-aos="zoom-in-left"></div>
+        </div>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#ffffff"
+          fill-opacity="1"
+          d="M0,128L48,149.3C96,171,192,213,288,197.3C384,181,480,107,576,80C672,53,768,75,864,112C960,149,1056,203,1152,234.7C1248,267,1344,277,1392,282.7L1440,288L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
+    <!-- Akhir Project -->
+
+    <!-- Sosmed -->
     <section id="sosmed">
       <div class="container">
         <div class="row text-center mb-4" data-aos="fade-down">
@@ -135,13 +170,13 @@
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
-          fill="#ffffff"
+          fill="#e2edff"
           fill-opacity="1"
           d="M0,128L48,149.3C96,171,192,213,288,197.3C384,181,480,107,576,80C672,53,768,75,864,112C960,149,1056,203,1152,234.7C1248,267,1344,277,1392,282.7L1440,288L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
         ></path>
       </svg>
     </section>
-    <!-- Akhir Galeri -->
+    <!-- Akhir Sosmed -->
 
     <!-- Contact -->
     <section id="kontak">
