--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
               <a class="nav-link" href="#project">Project</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="/bot">BOT</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#sosmed">Sosmed</a>
             </li>
             <li class="nav-item">
